fix: colorized scrollbar and progress from new gallery

--- a/src/index.css
+++ b/src/index.css
@@ -145,3 +145,20 @@
   animation: marquee 15s linear infinite; /* 15s é a duração, 'linear' e 'infinite' para que seja contínua */
   animation-delay: 1s; /* Opcional: Adiciona um pequeno atraso antes de começar a animação */
 }
+
+/* Custom scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #db628a;
+}
+::-webkit-scrollbar-thumb {
+  background: #ec0b4b;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #c01545;
+}
